<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:padding="5dp"
        android:background="#F5F5F5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/lb_my_journeys"
            android:layout_centerInParent="true"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@android:drawable/ic_menu_close_clear_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <LinearLayout
        android:padding="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/lb_journey_name"
            android:gravity="center"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/lb_start_date"
                android:gravity="center"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/lb_end_date"
                android:gravity="center"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/lb_journey_start"
                android:gravity="center"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/lb_journey_end"
                android:gravity="center"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>